# unifi-protect-backup

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dev-build.yml  dev.yml  release.yml
docker_root/defaults/: rclone.conf
docker_root/etc/cont-init.d/: 30-config
docker_root/etc/services.d/unifi-protect-backup/: run
docs/: api.md  installation.md  usage.md
misc/docker/etc/cont-init.d/: 01-setup-user  02-config  03-permissions
misc/docker/etc/services.d/unifi-protect-backup/: run
root/defaults/: rclone.conf
root/etc/cont-init.d/: 30-config
root/etc/services.d/unifi-protect-backup/: run
tests/: __init__.py  test_normalize_event_id.py  test_unifi_protect_backup.py
unifi_protect_backup/: __init__.py  cli.py  downloader.py  downloader_experimental.py  event_listener.py  missing_event_checker.py  missing_event_data.py  notifications.py  purge.py  uiprotect_patch.py  unifi_protect_backup.py  unifi_protect_backup_core.py  uploader.py  utils.py
